fix: incorrect gradient colors in the title

--- a/packages/docs/src/components/Header/index.astro
+++ b/packages/docs/src/components/Header/index.astro
@@ -11,10 +11,11 @@ import { Github } from './Github/index'
       </h1>
 
       <nav class="nav">
+        <a href="/guides/introduction">文档</a>
+        <a href="/api/core">API</a>
+        <!-- <a>加入我们</a>
         <a>加入我们</a>
-        <a>加入我们</a>
-        <a>加入我们</a>
-        <a>加入我们</a>
+        <a>加入我们</a> -->
       </nav>
     </section>
 
@@ -70,7 +71,11 @@ import { Github } from './Github/index'
 
         a {
           color: #1F2327;
-          font-size: 0.8rem;
+          font-size: 1rem;
+          text-decoration: none;
+          &:hover {
+            color: #274FEE;
+          }
         }
       }
     }
