--- a/packages/docs/src/pages/index.astro
+++ b/packages/docs/src/pages/index.astro
@@ -1,6 +1,5 @@
 ---
 import Layout from '@/layouts/Layout.astro'
-import 'modern-normalize'
 
 const features = [{
   label: '数据连接器，集成业务数据',
@@ -49,7 +48,7 @@ const tech = [{
         <span>新一代开源办公套件</span>
       </h2>
       <p class="desc">嵌入企业系统 · 高效流转数据 · 打破应用孤岛</p>
-      <a class="btn">立即体验</a>
+      <a class="btn" href="https://github.com/dream-num/univer">立即体验</a>
 
       <section class="materials">
         <div class="center">
@@ -241,6 +240,7 @@ focusFeature(0)
     line-height: 3.3rem;
     font-size: 1.2rem;
     font-weight: 500;
+    text-decoration: none;
     background: #274FEE;
     border-radius: 8px;
     box-shadow: 0px 4px 12px 0px rgba(11, 0, 208, 0.25);
