--- a/packages/docs/src/components/Header/index.astro
+++ b/packages/docs/src/components/Header/index.astro
@@ -7,7 +7,7 @@ import { Github } from './Github/index'
     <section class="left">
       <h1 class="title">
         <img src="/logo.svg" alt="logo" />
-        <span class="hidden"></span>
+        <span class="hidden">Univer</span>
       </h1>
 
       <nav class="nav">
@@ -20,10 +20,10 @@ import { Github } from './Github/index'
     </section>
 
     <section class="right">
-      <a class="github">
+      <a class="github" href="https://github.com/dream-num/univer">
         <Github client:load />
       </a>
-      <a class="playground">在线演示</a>
+      <a class="playground" href="/playground/overviews">在线演示</a>
     </section>
   </div>
 </header>
@@ -86,7 +86,7 @@ import { Github } from './Github/index'
       gap: 1.1rem;
 
       .github {
-
+        text-decoration: none;
       }
 
       .playground {
@@ -94,6 +94,7 @@ import { Github } from './Github/index'
         line-height: 2.6rem;
         padding: 0 2rem;
         color: #fff;
+        text-decoration: none;
         font-weight: 500;
         background: #274FEE;
         border-radius: 8px;
