--- a/packages/docs/src/layouts/Layout.astro
+++ b/packages/docs/src/layouts/Layout.astro
@@ -2,6 +2,8 @@
 import Header from '@/components/Header/index.astro'
 import Footer from '@/components/Footer/index.astro'
 
+import 'modern-normalize'
+
 interface Props {
 	title: string
 }
