--- a/packages/docs/src/components/Header/index.astro
+++ b/packages/docs/src/components/Header/index.astro
@@ -23,7 +23,7 @@ import { Github } from './Github/index'
       <a class="github" href="https://github.com/dream-num/univer">
         <Github client:load />
       </a>
-      <a class="playground" href="/playground/overviews">在线演示</a>
+      <a class="playground" href="/playground/overview">在线演示</a>
     </section>
   </div>
 </header>
