feat: fix links

--- a/packages/docs/src/pages/en-us/index.astro
+++ b/packages/docs/src/pages/en-us/index.astro
@@ -1,11 +1,19 @@
 ---
 import Layout from '@/layouts/Layout.astro'
+import Hero from '@/components/LandingFragments/Hero.astro'
+import Features from '@/components/LandingFragments/Features.astro'
+import Tech from '@/components/LandingFragments/Tech.astro'
+import Companies from '@/components/LandingFragments/Companies.astro'
 ---
 
 <Layout title="Univer">
   <main>
-    en-us
+    <Hero />
+
+    <Features />
+
+    <Tech />
+
+    <Companies />
   </main>
 </Layout>
-
-<style></style>
