--- a/packages/docs/src/layouts/Layout.astro
+++ b/packages/docs/src/layouts/Layout.astro
@@ -35,4 +35,8 @@ const { title } = Astro.props
 	-webkit-font-smoothing: antialiased;
 	background: #E4F4FE33;
 }
+
+img {
+	user-select: none;
+}
 </style>
