--- a/packages/docs/src/components/Footer/index.astro
+++ b/packages/docs/src/components/Footer/index.astro
@@ -82,6 +82,10 @@ const present = new Date().getFullYear()
         background: #274FEE;
         border-radius: 8px;
         box-shadow: 0px 4px 12px 0px rgba(11, 0, 208, 0.25);
+        transition: all .15s;
+        &:hover {
+          background: #3A60F7;
+        }
       }
     }
   }
