--- a/packages/docs/src/components/Header/Github/index.module.less
+++ b/packages/docs/src/components/Header/Github/index.module.less
@@ -8,6 +8,10 @@
   display: flex;
   align-items: center;
   gap: 8px;
+  transition: all 0.15s;
+  &:hover {
+    background: #F5F5F5;
+  }
 
   .star {
     font-weight: 500;
