--- a/packages/docs/src/components/Header/index.astro
+++ b/packages/docs/src/components/Header/index.astro
@@ -99,6 +99,10 @@ import { Github } from './Github/index'
         background: #274FEE;
         border-radius: 8px;
         box-shadow: 0px 4px 12px 0px #0B00D040;
+        transition: all .15s;
+        &:hover {
+          background: #3A60F7;
+        }
       }
     }
   }
