--- a/packages/docs/src/components/LandingFragments/Hero.astro
+++ b/packages/docs/src/components/LandingFragments/Hero.astro
@@ -84,6 +84,10 @@
     border-radius: 8px;
     box-shadow: 0px 4px 12px 0px rgba(11, 0, 208, 0.25);
     display: block;
+    transition: all .15s;
+    &:hover {
+      background: #3A60F7;
+    }
   }
 
   .materials {
