--- a/packages/docs/src/components/LandingFragments/Tech.astro
+++ b/packages/docs/src/components/LandingFragments/Tech.astro
@@ -3,7 +3,7 @@ const tech = [{
   icon: '/images/tech-1.svg',
   color: 'rgba(45, 174, 255, 0.4)',
   title: '基于依赖注入的插件化架构',
-  desc: 'Univer 功能被划分到多个插件当中，开发者可根据自己的需要组合插件，也可以自己开发插件满足个性化需要；'
+  desc: 'Univer 功能被划分到多个插件当中，开发者可根据自己的需要组合插件，也可以自己开发插件满足个性化需要。'
 }, {
   icon: '/images/tech-2.svg',
   color: 'rgba(255, 140, 81, 0.5)',
@@ -13,7 +13,7 @@ const tech = [{
   icon: '/images/tech-3.svg',
   color: 'rgba(254, 75, 75, 0.4)',
   title: '高度可扩展的命令系统',
-  desc: '用户在 Univer 上的操作都通过命令系统执行；基于命令系统可实现协同编辑、协同光标、live share、脚本生成等高级功能'
+  desc: '用户在 Univer 上的操作都通过命令系统执行；基于命令系统可实现协同编辑、协同光标、live share、脚本生成等高级功能。'
 }, {
   icon: '/images/tech-4.svg',
   color: 'rgba(39, 79, 238, 0.3)',
