docs: update docs

--- a/packages/docs/src/components/Header/index.astro
+++ b/packages/docs/src/components/Header/index.astro
@@ -13,6 +13,7 @@ import { Github } from './Github/index'
       <nav class="nav">
         <a href="/guides/introduction">文档</a>
         <a href="/api/core">API</a>
+        <a href="/guides/introduction/#商业授权">联系我们</a>
         <!-- <a>加入我们</a>
         <a>加入我们</a>
         <a>加入我们</a> -->
