--- a/packages/docs/src/components/LandingFragments/Features.astro
+++ b/packages/docs/src/components/LandingFragments/Features.astro
@@ -1,19 +1,19 @@
 ---
 const features = [{
   label: '数据连接器，集成业务数据',
-  desc: ['套件内置数据连接器，帮助用户跨平台导入外部数据；', '允许用户设置例行任务，以自动同步和更新数据，确保数据时效性。']
+  desc: ['调用数据连接器，跨平台导入外部数据；', '设置周期性任务，自动同步和更新数据。']
 }, {
   label: '脚本编辑器，记录操作指令',
-  desc: ['支持把用户的操作记录翻译成 Univer 脚本语言 Uniscript，实现自动化操作；', '更可以让 AI 学习操作命令并生成脚本和操作提示，让工作更智能。']
+  desc: ['编写和保存脚本语言，实现自动化操作；', '未来可实现AI生成脚本，让工作更智能。']
 }, {
   label: '高扩展性，适配个性化需求',
-  desc: ['提供丰富插件，用户可以自由组合插件甚至自定义开发功能；', '允许用户根据具体业务需求扩展产品，打造最适合服务企业的解决方案。']
+  desc: ['提供丰富的功能插件，调用所需组件一键下载；', '也能自定义开发功能，根据业务需求丰富扩展。']
 }, {
-  label: '无界模式，跨形态打通数据',
-  desc: ['支持在一个工作区内插入文档、表格、幻灯片等不同形态；', '在单元格内也可以使用有序/无序列表，在文档内也支持嵌入公式；', '把一个工作区当作一个项目来管理，在有限空间内承载更多上下文。']
+  label: '无界模式，跨形态打破边界',
+  desc: ['单元格内嵌有序列表，写内容也能结构清晰；', '幻灯片亦能写入公式 ，跨应用调取表格数据。']
 }, {
   label: '协同办公，团队作战更默契',
-  desc: ['支持多人同时编辑文档，可选参与者视角跟随浏览文档信息；', '插入评论定位待讨论问题，在文档内即时发起脑暴，高效沉淀关键结论。']
+  desc: ['允许多人同时编辑，群策群力头脑风暴；', '插入评论即时沟通，随时沉淀关键结论。']
 }]
 ---
 
