--- a/packages/docs/src/components/LandingFragments/Hero.astro
+++ b/packages/docs/src/components/LandingFragments/Hero.astro
@@ -25,7 +25,7 @@
       <div class="material dot dot-8" />
       <div class="material dot dot-9" />
 
-      <img class="sheets" src="/images/sheets-01.png" alt="univer sheets" draggable={false} />
+      <img class="sheets" src="/images/hero.png" alt="univer sheets" draggable={false} />
     </div>
   </section>
 </section>
@@ -106,6 +106,7 @@
       height: 100%;
       display: block;
       z-index: 0;
+      border-radius: 6px;
     }
 
     .material {
