docs: update playground

--- a/packages/docs/src/components/Header/index.astro
+++ b/packages/docs/src/components/Header/index.astro
@@ -14,9 +14,6 @@ import { Github } from './Github/index'
         <a href="/guides/introduction">文档</a>
         <a href="/api/core">API</a>
         <a href="/guides/introduction/#商业授权">联系我们</a>
-        <!-- <a>加入我们</a>
-        <a>加入我们</a>
-        <a>加入我们</a> -->
       </nav>
     </section>
 
@@ -24,7 +21,7 @@ import { Github } from './Github/index'
       <a class="github" href="https://github.com/dream-num/univer">
         <Github client:load />
       </a>
-      <a class="playground" href="/playground/overview">在线演示</a>
+      <a class="playground" href="/playground">在线演示</a>
     </section>
   </div>
 </header>
