feat: replace official website images

--- a/packages/docs/src/components/LandingFragments/Features.astro
+++ b/packages/docs/src/components/LandingFragments/Features.astro
@@ -120,9 +120,11 @@ focusFeature(0)
     .sheet {
       position: absolute;
       top: 3.3rem;
-      right: 8.9rem;
+      right: 9.7rem;
       height: 31.2rem;
+      border: 1px solid #ECECEC;
       border-radius: 6px;
+      box-shadow: 0px 8px 24px 0px rgba(31, 35, 39, 0.04);
       opacity: 0;
       transition: all 0.5s;
     }
