--- a/packages/docs/src/components/LandingFragments/Hero.astro
+++ b/packages/docs/src/components/LandingFragments/Hero.astro
@@ -51,6 +51,7 @@
     margin: 0 0 1.2rem;
     display: flex;
     justify-content: center;
+    user-select: none;
 
     span {
       font-size: 3.3rem;
@@ -105,8 +106,9 @@
       width: 100%;
       height: 100%;
       display: block;
-      z-index: 0;
       border-radius: 6px;
+      box-shadow: 0px 8px 24px 0px rgba(31, 35, 39, 0.12);
+      z-index: 0;
     }
 
     .material {
