docs: update homepage

--- a/packages/docs/src/components/Header/Github/index.module.less
+++ b/packages/docs/src/components/Header/Github/index.module.less
@@ -9,6 +9,10 @@
   align-items: center;
   gap: 8px;
   transition: all 0.15s;
+  @media (max-width: 1024px) {
+    height: 2.25rem;
+    padding: 0 0.75rem;
+  }
   &:hover {
     background: #F5F5F5;
   }
@@ -20,7 +24,7 @@
     align-items: center;
     gap: 2px;
 
-    >svg {
+    > svg {
       width: 1.2rem;
       height: 1.2rem;
     }
