--- a/packages/docs/src/components/Footer/index.astro
+++ b/packages/docs/src/components/Footer/index.astro
@@ -5,7 +5,10 @@ const present = new Date().getFullYear()
 <footer class="footer">
   <section class="banner">
     <div class="wrapper">
-      <p>开发成本高？快来试试 Univer！</p>
+      <p>
+        <span>开发成本高？</span>
+        <span>快来试试 Univer！</span>
+      </p>
       <a href="https://github.com/dream-num/univer">
         立即体验
       </a>
@@ -38,8 +41,9 @@ const present = new Date().getFullYear()
   </nav>
 
   <p class="copyright">
-    Copyright © 2021-{present} Mengshu. All Rights Reserved. 上海梦数科技 版权所有
-    服务协议 | 隐私政策
+    <span>Copyright © 2021-{present} Mengshu. All Rights Reserved.</span>
+    <span>上海梦数科技 版权所有</span>
+    <span>服务协议 | 隐私政策</span>
   </p>
 </footer>
 
@@ -48,6 +52,9 @@ const present = new Date().getFullYear()
   margin-top: 3rem;
   padding-bottom: 2rem;
   background: rgba(228, 244, 254, 0.55);
+  @media (max-width: 1024px) {
+    padding: 0 1.25rem;
+  }
 
   .banner {
     transform: translateY(-50%);
@@ -64,15 +71,24 @@ const present = new Date().getFullYear()
       display: flex;
       align-items: center;
       justify-content: space-between;
+      @media (max-width: 1024px) {
+        height: 3.75rem;
+        padding: 0 1.25rem 0 3rem;
+      }
 
       > p {
         margin: 0;
         color: #1F2327;
         font-size: 2rem;
         font-weight: 600;
+        @media (max-width: 1024px) {
+          font-size: 1rem;
+          white-space: nowrap;
+          display: grid;
+        }
       }
 
-      >a {
+      > a {
         height: 2.6rem;
         padding: 0 2rem;
         color: #fff;
@@ -83,6 +99,12 @@ const present = new Date().getFullYear()
         border-radius: 8px;
         box-shadow: 0px 4px 12px 0px rgba(11, 0, 208, 0.25);
         transition: all .15s;
+        @media (max-width: 1024px) {
+          height: 2.25rem;
+          padding: 0 1rem;
+          font-size: 0.875rem;
+          line-height: 2.25rem;
+        }
         &:hover {
           background: #3A60F7;
         }
@@ -95,6 +117,10 @@ const present = new Date().getFullYear()
     display: flex;
     justify-content: center;
     gap: 4.7rem;
+    @media (max-width: 1024px) {
+      flex-direction: column;
+      gap: 1rem;
+    }
 
     .column {
       display: flex;
@@ -120,9 +146,15 @@ const present = new Date().getFullYear()
   }
 
   .copyright {
+    margin: 0;
     color: #999;
     text-align: center;
     font-size: 0.7rem;
+    @media (max-width: 1024px) {
+      padding: 2rem 0 ;
+      display: grid;
+      gap: 0.5rem;
+    }
   }
 }
 </style>
