--- a/packages/docs/src/components/LandingFragments/Companies.astro
+++ b/packages/docs/src/components/LandingFragments/Companies.astro
@@ -41,6 +41,10 @@
   padding-top: 9.5rem;
   padding-bottom: 10rem;
   overflow-x: hidden;
+  @media (max-width: 1024px) {
+    padding-top: 2.75rem;
+    padding-bottom: 2.75rem;
+  }
 
   .title {
     margin-bottom: 3rem;
@@ -53,6 +57,9 @@
     position: relative;
     max-width: 1280px;
     margin: 0 auto;
+    @media (max-width: 1024px) {
+      display: none;
+    }
 
     .dot {
       position: absolute;
@@ -130,7 +137,7 @@
     display: grid;
     justify-content: center;
     gap: 2.2rem;
-    // overflow-x: hidden;
+    overflow: hidden;
 
     .line {
       display: flex;
@@ -141,7 +148,7 @@
         // animation: line-1 40s linear infinite;
       }
       &:nth-child(2) {
-        // justify-self: flex-end;
+        justify-self: flex-end;
         // animation: line-2 40s linear infinite;
       }
       &:nth-child(3) {
